<resources>
    <string name="app_name">FiskskaldjurAndroidApp</string>

    <!-- Login panel -->
    <string name="login_username">Användarnamn</string>
    <string name="login_password">Lösenord</string>
    <string name="login_show_password">Visa lösenord</string>
    <string name="login_button">Logga in</string>
    <string name="keep_me_logged_in">Behåll mig inloggad</string>

    <!-- Orders fragment -->
    <string name="orders_text1">TEXT 1</string>
    <string name="orders_text2">TEXT 2</string>
    <string name="orders_text3">TEXT 3</string>

    <!-- Map activity -->
    <string name="title_activity_maps">Map</string>

    <!-- Settings activity -->
    <string name="settings_logout">Logga ut</string>
    <string name="settings_no_user">Söker användarnamn..</string>
    <string name="settings_account">Kontoinställningar</string>
    <string name="settings_change_pass">Byt lösenord</string>
    <string name="settings_section_two">Hantera</string>

    <!-- Change password fragment -->
    <string name="password_current">Nuvarande lösenord</string>
    <string name="password_new">Nytt lösenord</string>
    <string name="password_repeat">Repetera lösenord</string>
    <string name="password_change">Byt lösenord</string>

    <!-- Image description -->
    <string name="nav_orders">Ordrar</string>
    <string name="nav_qr">QR Skanner</string>
    <string name="nav_map">Karta</string>
    <string name="nav_settings">Inställningar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">noti</string>
    <string name="channel_description">noti desc</string>
</resources>
