<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    tools:context=".StartScreenFragmentHolder">


    <FrameLayout
        android:background="@color/colorWhite"
        android:id="@+id/master_frame_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navbar">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorDarkerGrey"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageButton
            android:id="@+id/navbar_orders_button"
            app:srcCompat="@drawable/order_button_image"
            android:contentDescription="@string/nav_orders"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="#0000"
            android:onClick="gotoOrders"
            android:tint="@color/colorNiceBlue"
            />

        <ImageButton
            android:id="@+id/navbar_qr_button"
            app:srcCompat="@drawable/qr_scanner"
            android:contentDescription="@string/nav_qr"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="#0000"
            android:onClick="gotoScanQr"
            />

        <ImageButton
            android:id="@+id/navbar_map_button"
            app:srcCompat="@drawable/map_button_image"
            android:contentDescription="@string/nav_map"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="#0000"
            android:onClick="gotoMap"
            />

        <ImageButton
            android:id="@+id/navbar_settings_button"
            app:srcCompat="@drawable/settings_button_image"
            android:contentDescription="@string/nav_settings"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="#0000"
            android:onClick="gotoSettings"
            />

    </LinearLayout>
</RelativeLayout>