<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/fiskskaldjur"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:layout_above="@+id/login_relative"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"/>

    <!-- Relative for holding our data -->
    <RelativeLayout
        android:id="@+id/login_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_centerInParent="true">

        <!-- Username and password -->
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:backgroundTint="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:hint="@string/login_username"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack"
            android:backgroundTint="@color/colorBlack"
            android:textColorHint="@color/colorBlack"
            android:layout_below="@+id/login_username"/>

        <!-- Keep me logged in -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password">

            <TextView
                android:id="@+id/login_keep_me_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="3dp"
                android:text="@string/keep_me_logged_in"/>

            <Switch
                android:id="@+id/login_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/login_keep_me_in"
                android:layout_alignParentRight="true"
                android:onClick="changeSwitch"/>
        </RelativeLayout>

        <!-- Button for login -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_password"
            android:text="@string/login_button"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorWhite"
            android:onClick="loginUser"/>

    </RelativeLayout>


</RelativeLayout>